Published multiple files

--- a/src/site/notes/Calendar/Days/2026/2026-02-18.md
+++ b/src/site/notes/Calendar/Days/2026/2026-02-18.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/calendar/days/2026/2026-02-18/"}
+{"up":null,"related":null,"wayfinder":null,"efforts":null,"created":"2026-02-18","collections":null,"tags":[],"WIPstatus":null,"rank":null,"anchor":null,"reference":null,"dg-publish":true,"permalink":"/calendar/days/2026/2026-02-18/","dgPassFrontmatter":true}
 ---
 
 
