--- a/src/site/notes/Inbox/2.2.3 Revering & Relying Upon the Dharma Pt 1 (Responses).md
+++ b/src/site/notes/Inbox/2.2.3 Revering & Relying Upon the Dharma Pt 1 (Responses).md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/inbox/2-2-3-revering-and-relying-upon-the-dharma-pt-1-responses/"}
+{"up":["[[Dharma Training Course for Mitras (Year Two)]]"],"related":null,"wayfinder":null,"efforts":null,"created":"2025-09-23","collections":null,"tags":[],"WIPstatus":null,"rank":null,"anchor":null,"reference":["[[Dharma Training Course (Year Two).pdf]]"],"dg-publish":true,"permalink":"/inbox/2-2-3-revering-and-relying-upon-the-dharma-pt-1-responses/","dgPassFrontmatter":true}
 ---
 
 
